--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>FeloApp</title>
 </head>
 <body>
@@ -44,8 +45,40 @@
             <div class="p-4">
                 <h5>FeloApp</h5>
                 <p>¡Bienvenido, soy FeloApp!</p>
+                <hr>
+                <p class="text-star">¿Hola como estas?</p>
+                <p class="text-end text-primary fw-bold">Muy bien amo..</p>
+                <div class="textoChat"> 
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-8">
+                        <input type="text" class="form-control my-3" id="textoChat">
+                      </div>
+                      <div class="col-4 mt-2">
+                        <i class="bi bi-airplane-engines fs-3"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
             </div>
         </div>
+
+        <section class="container-fluid">
+          <div class="row">
+            <div class="col-12 my-5">
+              <img src="./assets/img/bannerSURA.jpg" alt="foto" class="img-fluid">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-8">
+              <h3>Titulo</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore nulla dolorem accusantium, aperiam asperiores quo magnam molestias. Quis impedit ipsum fugit deserunt. Repellat similique at voluptas corporis consectetur repellendus repudiandae.</p>
+            </div>
+            <div class="col-4">
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur error inventore eius praesentium amet dolores laboriosam voluptatum iure, nisi veritatis at similique fugiat culpa eum exercitationem repudiandae deserunt? Incidunt, alias.</p>
+            </div>
+          </div>
+        </section>
     </main>
     <footer>
 
