--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">ASEGURACHAT</a>
+              <a class="nav-link active" aria-current="page" href="#">AseguraChat</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"></a>
@@ -62,7 +62,7 @@
         allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
     </div>
 
-    <button class="btn btn-primary botonChat" id="botonChat"> Chatea con asegurachat </button>
+    <button class="btn btn-primary botonChat" id="botonChat"> Chatea con AseguraChat </button>
     <div class="cajaChat" id="cajaChat">
       <div class="p-4 mensajeChat" id="mensajeChat">
         <p class="text-start" id="humano">¡AseguraChat!</p>
@@ -84,19 +84,6 @@
       <div class="row">
         <div class="col-12 my-5">
           <img src="./assets/img/bannerSURA.jpg" alt="foto" class="img-fluid">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-8">
-          <h3>Titulo</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore nulla dolorem accusantium, aperiam
-            asperiores quo magnam molestias. Quis impedit ipsum fugit deserunt. Repellat similique at voluptas corporis
-            consectetur repellendus repudiandae.</p>
-        </div>
-        <div class="col-4">
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur error inventore eius praesentium amet
-            dolores laboriosam voluptatum iure, nisi veritatis at similique fugiat culpa eum exercitationem repudiandae
-            deserunt? Incidunt, alias.</p>
         </div>
       </div>
     </section>
@@ -429,7 +416,7 @@
     <div class="container-fluid mt-3">
       <div class="row">
         <div class="col-12 col-md-4 p-3">
-          <h2 class="mb-3 mx-2"> <img class="logo" src="assets/img/logo.png" alt="logo">Asegurachat</h2>
+          <h2 class="mb-3 mx-2"> <img class="logo" src="assets/img/logo.png" alt="logo">AseguraChat</h2>
 
           <p class="p-2 mx-2">Un chatbot para citas médicas es una herramienta interactiva que permite a los pacientes solicitar, gestionar y cancelar citas de manera rápida y eficiente. Este chatbot ofrece una experiencia de usuario fluida, proporcionando recordatorios automáticos de citas próximas, información detallada sobre horarios disponibles, y respuestas instantáneas a preguntas frecuentes sobre servicios médicos y procedimientos. Además, puede facilitar la comunicación directa con el personal médico para resolver dudas específicas, mejorando así la accesibilidad y conveniencia del servicio de atención médica.
           </p>
@@ -447,7 +434,7 @@
           </div>
 
           <div class="mb-5">
-            <h2><i class="bi bi-building fw-bold mt-5 fs-2"></i> Arl Sura</h2>
+            <h2><i class="bi bi-building fw-bold mt-5 fs-2"></i> ARL Sura</h2>
             <button class="px-4 py-1 rounded-5 bg-primary border-0 text-white fs-4  boton-visitar">VISITAR</button>
           </div>
         </div>
